--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,9 @@
 trigger:
 - '*'
-
+ #hola reputazos 
 variables:
   buildConfiguration: 'Release'
-
+  
 stages:
 - stage: 'Build'
   displayName: 'Build the web application'
@@ -14,7 +14,7 @@ stages:
       vmImage: 'ubuntu-20.04'
       demands:
       - npm
-
+  
     variables:
       wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
       dotnetSdkVersion: '6.x'
@@ -84,6 +84,6 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Azure App Service Deploy: website'
             inputs:
-              azureSubscription: 'Azure subscription 1'
+              azureSubscription: 'conn_mbeltran2'
               appName: '$(WebAppName)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
